# notegenie5

./: .env  .gitignore  README.md  analyzer.py  pyproject.toml
app/: main.py
app/core/: gemini_guard.py
app/routes/: summary.py  upload.py
app/services/: gemini_client.py  openrouter_client.py  prompt.json  summarizer.py  supabase_client.py
app/utils/: text_chucker.py
middleware/: error_handler.py
