[project]
name = "notegenie-five"
version = "0.1.0"
description = "This is the fith trial but first self code of NOTEGENIE, and app the summarize the note of students in seconds"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi>=0.123.5",
    "ipykernel>=7.1.0",
    "numpy>=2.3.5",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "supabase>=2.25.0",
    "tesseract>=0.1.3",
    "torch>=2.9.1",
    "uvicorn>=0.38.0",
]
